IDEX-213 use WebWorker for parsing Java files